--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
-<!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
+html {
+  margin: 0;
+  padding: 0;
+}
 
-  </head>
-  <body>
-    <script src="sketch.js"></script>
-  
+body {
+  margin: 100px auto 0 auto;
+  width: 80%;
+  text-align: center;
+  font-family: "courier", monospace;
+}
 
-</body></html>
+canvas {
+  margin: auto;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: -1
+}
